--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hexo-theme-landscape": "^0.0.3",
     "hexo-wordcount": "^6.0.1",
     "live2d-widget-model-haru": "^1.0.5",
-    "live2d-widget-model-hibiki": "^1.0.5"
+    "live2d-widget-model-hibiki": "^1.0.5",
+    "live2d-widget-model-shizuku": "^1.0.5"
   }
 }
