--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render:
+skip_render: '*.html'
 
 # Writing
 new_post_name: :title.md # File name of new posts
@@ -127,33 +127,10 @@ highlight:
 
 marked:
   langPrefix: line-numbers language-
-
-
-
-
-# ## Live2D看板娘
-# live2d:
-#   enable: true
-#   pluginModelPath: assets/
-#   model:
-#     #模板目录，在node_modules里
-#     use: live2d-widget-model-hibiki 
-#   display:
-#     position: right
-#     width: 300 
-#     height: 600
-#   mobile:
-#     # 在手机端显示
-#     show: false   
-#   rect:
-#     opacity:0.7
-
-
 # Live2D
 ## https://github.com/EYHN/hexo-helper-live2d
 live2d:
   enable: true
-  # enable: false
   scriptFrom: local # 默认
   pluginRootPath: live2dw/ # 插件在站点上的根目录(相对路径)
   pluginJsPath: lib/ # 脚本文件相对与插件根目录路径
@@ -165,25 +142,24 @@ live2d:
   debug: false # 调试, 是否在控制台输出日志
   model:
     use: live2d-widget-model-shizuku
-    scale: 1
-    hHeadPos: 0.5
-    vHeadPos: 0.618
+    # use: live2d-widget-model-hibiki
+    # scale: 1
+    # hHeadPos: 0.5
+    # vHeadPos: 0.618
     # use: live2d-widget-model-wanko # npm-module package name
     # use: wanko # 博客根目录/live2d_models/ 下的目录名
     # use: ./wives/wanko # 相对于博客根目录的路径
     # use: https://cdn.jsdelivr.net/npm/live2d-widget-model-wanko@1.0.5/assets/wanko.model.json # 你的自定义 url
   display:
-    superSample: 1l
-    width: 150
-    height: 350
+  #   superSample: 1l
+    # width: 150
+    # height: 350
     position: right
     hOffset: 80
     vOffset: -20
   mobile:
-    show: true # 是否在移动设备上显示
-    scale: 0.5 # 移动设备上的缩放       
-  react:
-    opacityDefault: 0.7
-    opacityOnHover: 0.8
-
-# skip_render: "_posts/(3条消息) markdown常见数学符号和运算_MyNotes-CSDN博客_markdown数学符号.html"
+    show: false # 是否在移动设备上显示
+  #   scale: 0.5 # 移动设备上的缩放       
+  # react:
+  #   opacityDefault: 0.7
+  #   opacityOnHover: 0.8
