--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: ''
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: http://KawYang.github.io
-permalink: kawyang/:abbrlink.html
+permalink: /:abbrlink.html
 abbrlink: 
   auto_category: 
     enable: false
