--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "5.4.0"
   },
   "dependencies": {
+    "aplayer": "^1.10.1",
     "hexo": "^5.0.0",
     "hexo-abbrlink": "^2.2.1",
     "hexo-deployer-git": "^3.0.0",
@@ -23,6 +24,7 @@
     "hexo-helper-live2d": "^3.1.1",
     "hexo-inject": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
+    "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-marked": "^4.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
