--- a/themes/hexo-theme-matery/_config.yml
+++ b/themes/hexo-theme-matery/_config.yml
@@ -142,12 +142,12 @@ socialLink:
   csdn: https://blog.csdn.net/liang520521
   weibo: # https://weibo.com/xxx
   zhihu: # https://www.zhihu.com/xxx
-  rss: true # true、false
+  rss: false # true、false
 
 # Whether to activate the Post TOC, and Configure which title types are supported by TOC support.
-# You can add `toc: false` to the Front-matter of a post to turn off the TOC.
+# You can add `toc: true` to the Front-matter of a post to turn off the TOC.
 # 是否激活文章 TOC 功能，并配置TOC支持选中哪些标题类型，这是全局配置。
-# 可以在某篇文章的 Front-matter 中再加上`toc: false`，使该篇文章关闭TOC目录功能
+# 可以在某篇文章的 Front-matter 中再加上`toc: true`，使该篇文章关闭TOC目录功能
 toc:
   enable: true
   heading: h2, h3, h4
@@ -171,7 +171,7 @@ reward:
 # Whether to activate the copyright information of the blog and author when copying the post content.
 # minCharNumber: Approve copyright information by copying at least how many characters.
 # 是否激活复制文章时追加博客和作者的版权信息.
-copyright:
+copyright:`
   enable: false
   minCharNumber: 120 # 至少复制多少个字符就追加版权信息.
   description: 本文章著作权归作者所有，任何形式的转载都请注明出处。
@@ -635,17 +635,4 @@ bbtime:
  appKey: # 你的appKey
  serverURLs: # https://你的api
 
-
-# # 代码高亮设置
-# highlight:
-#   enable: false
-#   line_number: true
-#   auto_detect: false
-#   tab_replace: ''
-#   wrap: true
-
-#   hljs: false
-
-# # 代码样式 设置
-# highlight_theme: night eighties
 
