去掉多余内容

--- a/_config.yml
+++ b/_config.yml
@@ -129,8 +129,9 @@ marked:
   langPrefix: line-numbers language-
 # Live2D
 ## https://github.com/EYHN/hexo-helper-live2d
+## 看板娘配置
 live2d:
-  enable: true
+  enable: false
   scriptFrom: local # 默认
   pluginRootPath: live2dw/ # 插件在站点上的根目录(相对路径)
   pluginJsPath: lib/ # 脚本文件相对与插件根目录路径
